--- a/src/NTS.Website/Views/Users/Edit.cshtml
+++ b/src/NTS.Website/Views/Users/Edit.cshtml
@@ -12,78 +12,67 @@
     <div class="alert alert-info">You can not edit an inactive track.</div>
 }
 
-@using (Html.BeginForm())
-{
+<form asp-controller="Users" asp-action="Edit" method="post" class="form-horizontal" role="form">
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.HiddenFor(model => model.Id)
+    <hr />
+    <input asp-for="@Model.Id" type="hidden" />
 
-        <fieldset @(!Model.IsActive ? "disabled" : String.Empty)>
-            <div class="form-group">
-                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-                </div>
+    <fieldset @(!Model.IsActive ? "disabled" : string.Empty)>
+        <div class="form-group">
+            <label asp-for="@Model.FirstName" class="col-md-2 control-label"></label>
+            <div class="col-md-4">
+                <input asp-for="@Model.FirstName" class="form-control" />
+                <span asp-validation-for="@Model.FirstName" class="text-danger"></span>
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <label asp-for="@Model.LastName" class="col-md-2 control-label"></label>
+            <div class="col-md-4">
+                <input asp-for="@Model.LastName" class="form-control" />
+                <span asp-validation-for="@Model.LastName" class="text-danger"></span>
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-4">
-                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <label asp-for="@Model.UserName" class="col-md-2 control-label"></label>
+            <div class="col-md-4">
+                <input asp-for="@Model.UserName" class="form-control" />
+                <span asp-validation-for="@Model.UserName" class="text-danger"></span>
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-4">
-                    @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <label asp-for="@Model.Email" class="col-md-2 control-label"></label>
+            <div class="col-md-4">
+                <input asp-for="@Model.Email" class="form-control" />
+                <span asp-validation-for="@Model.Email" class="text-danger"></span>
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-4">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            <label asp-for="@Model.RoleId" class="col-md-2 control-label"></label>
+            <div class="col-md-4">
+                <select asp-for="@Model.RoleId" class="form-control">
+                    @foreach (var role in Model.Roles)
+                    {
+                        <option id="role-@role.Id" value="@role.Id" @(role.Id == Model.RoleId ? "selected" : string.Empty)>@role.Name</option>
+                    }
+                </select>
             </div>
+        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.RoleId, new { @class = "col-md-2 control-label" })
-                <div class="col-md-4">
-                    <select class="form-control" id="RoleId" name="RoleId">
-                        @foreach (var role in Model.Roles)
-                        {
-                            <option id="role-@role.Id" value="@role.Id" @(role.Id == Model.RoleId ? "selected" : string.Empty)>@role.Name</option>
-                        }
-                    </select>
-                </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-4">
+                <button type="submit" class="btn btn-default">
+                    <i class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></i>
+                    <span>Save</span>
+                </button>
             </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-4">
-                    <button type="submit" class="btn btn-default">
-                        <i class="glyphicon glyphicon-floppy-saved" aria-hidden="true"></i>
-                        <span>Save</span>
-                    </button>
-                </div>
-            </div>
-        </fieldset>
-    </div>
-}
+        </div>
+    </fieldset>
+</form>
 
 <div>
     <a href="/Users/Index">
