--- a/src/NTS.Website/Views/Shared/_Layout.cshtml
+++ b/src/NTS.Website/Views/Shared/_Layout.cshtml
@@ -26,12 +26,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">NTS.Website</a>
+                <a asp-area="" asp-controller="Users" asp-action="Index" class="navbar-brand">NTS.Website</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -42,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - NTS.Website</p>
+            <p>&copy; 2020 - NTS.Website</p>
         </footer>
     </div>
 
