update to version net 5

--- a/src/NTS.Website/Views/Users/Create.cshtml
+++ b/src/NTS.Website/Views/Users/Create.cshtml
@@ -72,7 +72,7 @@
             <select asp-for="@Model.RoleId" class="form-control">
                 @foreach (var role in Model?.Roles)
                 {
-                    <option id="role-@role.Id" value="@role.Id" @(role.Name == "User" ? "selected" : string.Empty)>@role.Name</option>
+                    <!option id="role-@role.Id" value="@role.Id" @(role.Name == "User" ? "selected" : string.Empty)>@role.Name</!option>
                 }
             </select>
         </div>
